<resources>
    <string name="app_name">Wolsung Differential Engine</string>
    <string-array name="tabs">
        <item>General</item>
        <item>Skills</item>
        <item>Edges</item>
        <item>Achievements</item>
        <item>Background</item>
    </string-array>
    <string-array name="nationalities">
        <item>Aquitaine</item>
        <item>Alfheim</item>
        <item>Baventia</item>
        <item>Silvanegro</item>
        <item>Aeol</item>
        <item>Hrimthorst</item>
        <item>Jotunheim</item>
        <item>Coriole</item>
        <item>Morgovia</item>
        <item>Holy Pontifical State</item>
        <item>Sernenissima</item>
        <item>Scylla and Charibdis</item>
        <item>Slavia</item>
        <item>Trimonarchy</item>
        <item>Westria</item>
        <item>Wotany</item>
        <item>Ys</item>
        <item>Atlantis</item>
        <item>Lemuria</item>
        <item>Sunnir</item>
        <item>Vinland</item>
    </string-array>
    <string name="plus_minus" translatable="false">±</string>
    <string-array name="races">
        <item>Elf</item>
        <item>Gnome</item>
        <item>Dwarf</item>
        <item>Human</item>
        <item>Halfling</item>
        <item>Ogre</item>
        <item>Orc</item>
        <item>Troll</item>
    </string-array>
    <string-array name="race_perks">
        <item>Dancing with a blade| Dreams and nightmares| Elven grace| Hypnotic charm| Iron</item>
        <item>Allegories and parables| Gnomish wise man| Numerologist| Secret runes| Mistrust</item>
        <item>Cold logic| Darkness under mountains| Gadgeteer| Inspired mechanic| Sunlight</item>
        <item>With the last breath| One of our own| Rich experience| Beginner’s luck| Curiosity killed the cat</item>
        <item>City slicker| Elusive| Kith and kin| Superhuman reflexes| Tiny</item>
        <item>Animal magnetism| Hard as nails| It\'s just an ogre| Strongman| Shyness</item>
        <item>Honesty of the orcs| Mind\'s eye| Noble ancestors| Secret techniques of the Sunnirian masters| Stranger in a strange land</item>
        <item>Heat up the atmosphere| Fiery passion| Fireproof| Word of honor| Fiery temper</item>
    </string-array>
    <string-array name="race_weaknesses">
        <item>The greatest weakness of all elves is their vulnerability to iron. A rash and other symptoms of an allergy are caused by using iron tools or traveling in iron vehicles.</item>
        <item>Althought gnomes have been living in Vanadia for centuries, they are still alien. They have their own customs, religion, knowledge and magic inaccessible for other races. Gnomes are reserved and usually stick together, so it isn\'t very surprising that people react to them with barely hidden mistrust.</item>
        <item>Since the beginning of time dwarves have lived underground and led a mostly nocturnal lifestyle. Lack of eye whites, huge pupils, and a marble white complexion make functioning in daylight extremely difficult for them.</item>
        <item>Humans are restless. They are curious about what lies beyond the horizon and want to know where every path leads. The call of the unknown tempts them all the time. This is why they can be easily talked into every madness if only one makes proper use of their in-born curiosity.</item>
        <item>Hlaflings are famous for their great spirit, but it resides in a really small body. This can be an issue when facing brutal power, or when trying to reach a highly situated door handle.</item>
        <item>It\'s hard to be an ogre in contemporary society. Many ogres grow up in orphanages not knowing their parents (or at least their mothers), but aware of their otherness and understand that society does not expect much of them. Even the more successful ogres have to live with their racial burden.</item>
        <item>Orcs are strangers in Vanadia. Even if they were born there, some nuances of Vanadian culture still remain incomprehensible for them.</item>
        <item>Trolls are easily provoked.</item>
    </string-array>
    <string-array name="sexes">
        <item>Gentelman</item>
        <item>Lady</item>
    </string-array>
    <string-array name="archetypes">
        <item>Explorer</item>
        <item>Daredevil</item>
        <item>Socialite</item>
        <item>Investigator</item>
    </string-array>
    <string-array name="archetype_cards">
        <item>&lt;b&gt;spades&lt;/b&gt; - &lt;i&gt;experience&lt;/i&gt;;circumstances that favor the more experienced hero, knowledge about monsters’ weaknesses and foreign customs.&lt;br&gt;&lt;b&gt;hearts&lt;/b&gt; - &lt;i&gt;survival&lt;/i&gt;; objects and circumstances that help to survive in an unfriendly environment, and to avoid physical harm or sickness.&lt;br&gt;&lt;b&gt;diamonds&lt;/b&gt; - &lt;i&gt;trophies&lt;/i&gt;; objects and achievements that help winning recognition – souvenirs, inventions, etc.&lt;br&gt;&lt;b&gt;clubs&lt;/b&gt; - &lt;i&gt;orientation&lt;/i&gt;;  objects and items that prevent you from getting lost, help to reach your destination, find lost objects, etc.</item>
        <item>&lt;b&gt;spades&lt;/b&gt; - &lt;i&gt;distraction&lt;/i&gt;; objects and circumstances that help to distract your opponents, set an ambush, etc.&lt;br&gt;&lt;b&gt;hearts&lt;/b&gt; - &lt;i&gt;cover&lt;/i&gt;; objects and circumstances that help to hide something or to remain hidden.&lt;br&gt;&lt;b&gt;diamonds&lt;/b&gt; - &lt;i&gt;tools&lt;/i&gt;; means to pass a physical barrier, disarm a trap, pick a lock, etc.&lt;br&gt;&lt;b&gt;clubs&lt;/b&gt; - &lt;i&gt;transportation&lt;/i&gt;; objects and circumstances that allow you to move around the scene, vehicles, slides, alternative routes, etc.</item>
        <item>&lt;b&gt;spades&lt;/b&gt; - &lt;i&gt;machinations&lt;/i&gt;; hearing and spreading gossip, tricking opponents into social blunders, contacts in the press, etc.&lt;br&gt;&lt;b&gt;hearts&lt;/b&gt; - &lt;i&gt;emotions&lt;/i&gt;; helpful kith and kin, weddings and funerals and other events of a social nature, a sudden surge of emotions or repressed feelings, etc.&lt;br&gt;&lt;b&gt;diamonds&lt;/b&gt; - &lt;i&gt;formalities&lt;/i&gt;; means and circumstances to avoid the red tape, helpful officers and policemen, useful business connections, etc.&lt;br&gt;&lt;b&gt;clubs&lt;/b&gt; - &lt;i&gt;entertainment&lt;/i&gt;; friends among the bohemians, connections and circumstances that help to enter public events, all that helps during public performances, etc.</item>
        <item>&lt;b&gt;spades&lt;/b&gt; - &lt;i&gt;suspects&lt;/i&gt;; clues about someone’s occupation, nationality, background, whereabouts, character, past endeavors, motives and plans.&lt;br&gt;&lt;b&gt;hearts&lt;/b&gt; - &lt;i&gt;recognition&lt;/i&gt;; clues and circumstances that help to win the public attention, make a successful speech, face a danger without fear or in some other way use the hero’s esteem.&lt;br&gt;&lt;b&gt;diamonds&lt;/b&gt; - &lt;i&gt;objects&lt;/i&gt;; clues about inanimate objects and items, their history, unique features, circumstances that allow you to find hidden objects, etc.&lt;br&gt;&lt;b&gt;clubs&lt;/b&gt; - &lt;i&gt;circumstances&lt;/i&gt;; clues that allow you to deduct what happened on the scene, re-create the crime, get answers to questions: Where? When? How?</item>
    </string-array>
    <string-array name="professions">
        <item>Special agent</item>
        <item>Actor</item>
        <item>Artist</item>
        <item>Aristocrat/Noble</item>
        <item>Antiquarian</item>
        <item>Bon vivant</item>
        <item>Detective</item>
        <item>Cleric</item>
        <item>Journalist</item>
        <item>Hunter</item>
        <item>Scientist</item>
        <item>Traveler</item>
        <item>Officer</item>
        <item>Writer</item>
        <item>Criminal</item>
        <item>Ritualist</item>
        <item>Spiritist</item>
        <item>Sportsman</item>
        <item>Technomancer</item>
        <item>Gunslinger</item>
    </string-array>
    <string name="new_character">New character</string>
    <string name="new_character_short">New character</string>
    <string name="discard_character">Remove character</string>
    <string name="discard_character_short">Remove</string>
    <string name="renew_used">New game session</string>
    <string name="renew_used_short">New session</string>
    <string name="experience_points">Experience points</string>
    <string name="wealth">Wealth</string>
    <string name="current">Current</string>
    <string name="used">Used</string>
    <string name="edges_gadgets_companions">Edges, Gadgets and Companions</string>
    <string name="background">Background</string>
    <string name="scars">Scars</string>
    <string name="team">Team members</string>
    <string name="about">About</string>
    <string name="about_short">About</string>
    <string name="export_to_clipboard">Export to clipboard</string>
    <string name="export_to_clipboard_short">Export</string>
    <string name="import_from_clipboard">Import from clipboard</string>
    <string name="import_from_clipboard_short">Import</string>
</resources>