<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CharacterSheetActivity" >

    <item
        android:id="@+id/menu_renew_used"
        android:title="@string/renew_used"
        android:titleCondensed="@string/renew_used_short"
        android:icon="@drawable/ic_av_repeat_white"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/menu_new_character"
        android:title="@string/new_character"
        android:titleCondensed="@string/new_character_short"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/menu_discard_character"
        android:title="@string/discard_character"
        android:titleCondensed="@string/discard_character_short"
        android:icon="@drawable/ic_discard"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/menu_export_to_clipboard"
        android:title="@string/export_to_clipboard"
        android:titleCondensed="@string/export_to_clipboard_short"
        android:icon="@drawable/ic_content_copy_white"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/menu_import_from_clipboard"
        android:title="@string/import_from_clipboard"
        android:titleCondensed="@string/import_from_clipboard_short"
        android:icon="@drawable/ic_content_paste_white"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android:titleCondensed="@string/about_short"
        android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom"></item>

</menu>
